2007-06-18  Martin Hunt  <hunt@redhat.com>
	 From Quentin Barnes.
	* lib/stap_run.exp, lib/stap_run2.exp, lib/systemtap.exp,
	systemtap.base/cache.exp, systemtap.base/optim.exp,
	systemtap.base/overload.exp, systemtap.base/prologues.exp,
	systemtap.maps/absentstats.exp, systemtap.maps/foreach_fail.exp,
	systemtap.maps/ix_clear*.exp, systemtap.maps/pmap_agg_overflow.exp,
	systemtap.samples/args.exp, systemtap.samples/arith.exp,
	systemtap.samples/arith_limits.exp, 
	systemtap.samples/control_limits.exp, systemtap.samples/lket.exp,
	systemtap.samples/pfaults.exp, systemtap.samples/poll_map.exp,
	systemtap.samples/primes.exp, systemtap.samples/profile.exp,
	systemtap.samples/queue_demo.exp, systemtap.samples/symbols.exp,
	systemtap.samples/syscalls1.exp, systemtap.samples/syscalls2.exp,
	systemtap.samples/transport.exp: Small fixes to patterns, plus
	fix timeouts for slower systems.

2007-06-15  Frank Ch. Eigler  <fche@elastic.org>

	* lib/systemtap.exp (stap_run_batch): Detect crashing stap and
	represent this as failing return code.

2007-06-14  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/syscalls.stp: Use printf
	for output to avoid problems with long paths.

	 From Quentin Barnes.
	* systemtap.samples/system_func.exp: Change expect matching.
	
2007-06-14  David Smith  <dsmith@redhat.com>

	* systemtap.samples/profile.stp: Change output to avoid problems
	when kernel source path is long.

2007-06-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 3331.
	* systemtap.base/deref2.*: New test, disabled.

2007-06-04  Frank Ch. Eigler  <fche@elastic.org>

	PR 4589.
	* systemtap.base/optim.*: Rewritten, simplified.

2007-05-30  Frank Ch. Eigler  <fche@redhat.com>

	PR 4567.
	* systemtap.base/optim.stp, optim.exp: New test.
	
2007-05-29  Will Cohen  <wcohen@redhat.com>

	PR4540
	* systemtap.stress/conversions.exp: Adjust for ia64 address space.

2007-05-25  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/lket.exp (cleanfiles): Set timeout inside expect.